manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ossaibot-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-ossaibot
            port:
              number: 8080
        pathType: Prefix
